# rag-kb

./: .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
scripts/: rag.py  server.py
src/rag_kb/: __init__.py  cli.py  config.py  core.py  document_parser.py  embedding.py  text_chunker.py  vector_store.py
